# crewai-dev

./: .gitignore  README.md
corinthias/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  report.md  requirements.txt
corinthias/src/corinthias/: api.py  crew.py  main.py
corinthias/src/corinthias/config/: agents.yaml  tasks.yaml
