[project]
name = "corinthias"
version = "0.1.0"
description = "corinthias using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0"
]

[project.scripts]
corinthias = "corinthias.main:run"
run_crew = "corinthias.main:run"
train = "corinthias.main:train"
replay = "corinthias.main:replay"
test = "corinthias.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
